--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PerfumeProject"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.scrap.ScrapActivity"></activity>
-        <activity android:name=".ui.search.SearchActivity" />
-        <activity android:name=".ui.recommendation.RecommendationActivity" />
-        <activity android:name=".ui.home.HomeActivity" />
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.scrap.ScrapActivity" android:exported="true"></activity>
+        <activity android:name=".ui.search.SearchActivity"  android:exported="true"/>
+        <activity android:name=".ui.recommendation.RecommendationActivity" android:exported="true"/>
+        <activity android:name=".ui.home.HomeActivity" android:exported="true"/>
+        <activity android:name=".ui.login.LoginActivity" android:exported="true" />
+        <activity android:name=".ui.SplashActivity" android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
