--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,13 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.30.0'
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.5'
 
-    implementation "com.kakao.sdk:v2-user:2.3.0" // 카카오 로그인
+
+    implementation "com.kakao.sdk:v2-user:2.5.0" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.5.0" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.5.0" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.5.0" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.5.0" // 카카오내비
+
 
     // dagger - hilt
     implementation "com.google.dagger:hilt-android:2.31.2-alpha"
