--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,6 @@
         android:theme="@style/Theme.PerfumeProject"
         android:usesCleartextTraffic="true">
 
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key" />
-
 
         <activity android:name=".ui.scrap.ScrapActivity" android:exported="true"></activity>
         <activity android:name=".ui.search.SearchActivity"  android:exported="true"/>
@@ -34,6 +30,18 @@
         </activity>
         <activity android:name=".MainActivity" />
 
+        <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <!--Redirect URI: "kakao{NATIVE_APP_KEY}://oauth"-->
+                <data
+                    android:host="oauth"
+                    android:scheme="@string/kakao_native_key"/>
+            </intent-filter>
+        </activity>
 
     </application>
 
