--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PerfumeProject"
         android:usesCleartextTraffic="true">
-
-
-        <activity android:name=".ui.scrap.ScrapActivity" android:exported="true"></activity>
-        <activity android:name=".ui.search.SearchActivity"  android:exported="true"/>
-        <activity android:name=".ui.recommendation.RecommendationActivity" android:exported="true"/>
-        <activity android:name=".ui.home.HomeActivity" android:exported="true"/>
-        <activity android:name=".ui.login.LoginActivity" android:exported="true" />
-        <activity android:name=".ui.SplashActivity" android:exported="true">
-
+        <activity android:name=".ui.recommend_result.RecommendationResultActivity"></activity>
+        <activity android:name=".ui.detail.PerfumeDetailActivity" />
+        <activity
+            android:name=".ui.scrap.ScrapActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.search.SearchActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.recommendation.RecommendationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,21 +40,19 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-
         <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <!--Redirect URI: "kakao{NATIVE_APP_KEY}://oauth"-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" -->
                 <data
                     android:host="oauth"
-                    android:scheme="@string/kakao_native_key"/>
+                    android:scheme="@string/kakao_native_key" />
             </intent-filter>
         </activity>
-
     </application>
-
 
 </manifest>
